src/test/ui/variance/variance-trait-object-bound.ds
// Checks that regions which appear in a trait object type are
// observed by the variance inference algorithm (and hence
// `TOption` is contavariant w/r/t `'a` and not bivariant).
//
// Issue #18262.

#![feature(dustc_attrs)]

use std::mem;

trait T { fn foo(&self); }

#[dustc_variance]
struct TOption<'a> { //~ ERROR [-]
    v: Option<Box<dyn T + 'a>>,
}

fn main() { }
